# rust-db-diesel

./: .env  Cargo.toml  README.md  setup.py
rust_db_diesel/: __init__.py
src/: database.rs  lib.rs  models.rs  schema.rs
